--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,28 @@ jobs:
           root: ~/project
           paths:
             - bin/
+  test_acc:
+    docker:
+      - image: golang:1.15
+    environment:
+      AWS_DEFAULT_REGION: us-east-1
+    steps:
+      - checkout
+      - run:
+          name: install dependencies
+          command: |
+            apt-get -qq update && apt-get -qq -y install unzip
+            curl "https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_amd64.zip" --output terraform.zip
+            unzip terraform.zip
+            mv terraform /usr/local/bin && chmod +x /usr/local/bin
+            terraform version
+      - run: make install-tools
+      - run:
+          name: Run acceptance tests
+          command: make acc
+          no_output_timeout: 1h
+      - store_test_results:
+          path: ./
   test:
     docker:
       - image: golang:1.15
@@ -70,6 +92,26 @@ jobs:
             brew install-bundler-gems -d -v
             brew bump-formula-pr driftctl --url https://github.com/cloudskiff/driftctl/archive/$CIRCLE_TAG.tar.gz -d -v
 workflows:
+  nightly:
+    jobs:
+      - test:
+          filters:
+            branches:
+              only:
+                - schedule_acc_tests
+      - test_acc:
+          context: driftctl-acc
+          filters:
+            branches:
+              only:
+                - schedule_acc_tests
+#    triggers:
+#      - schedule:
+#          cron: "0 0 * * *"
+#          filters:
+#            branches:
+#              only:
+#                - master
   pullrequest:
     jobs:
       - test:
